welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: ';' expected but 'else' found.
  else {return "10:00"}
  ^